changed again for equation rendering. grrrr...

--- a/Introduction to Granger Causality.ipynb
+++ b/Introduction to Granger Causality.ipynb
@@ -140,12 +140,10 @@
     "2. $P_t(A|B)$ is already optimized.\n",
     "\n",
     "### Limitations and Notes\n",
-    "1. (Granger 1969) The Granger Causality Test is dependent on the universe of information $U$ that you are in. One process can G-cause another in a universe $U$ but is not in the expanded $U'$. For example, suppose\n",
-    "\\begin{equation}\n",
-    "X_t=A_{t-1} + ϵ_t\\\\\n",
-    "Y_t=A_t+α_t\\\\\n",
-    "Z_t=A_t+β_t\n",
-    "\\end{equation} where $A_t$ is stationary and $ϵ_t, α_t, β_t$ are all uncorellated    white-noise series with equal variances. Then within the set $D=(X_t,Y_t), Y_t\\Rightarrow X_t$ and within $D'=(X_t,Z_t), Z_t\\Rightarrow X_t$. But within the set $D=(X_t,Y_t,Z_t), Y_t\\nRightarrow X_t$ and $Z_t\\nRightarrow X_t$.\n",
+    "1. (Granger 1969) The Granger Causality Test is dependent on the universe of information $U$ that you are in. One process can G-cause another in a universe $U$ but is not in the expanded $U'$. For example, suppose \n",
+    "$X_t=A_{t-1} + ϵ_t, Y_t=A_t+α_t, Z_t=A_t+β_t$.\n",
+    "\n",
+    "where $A_t$ is stationary and $ϵ_t, α_t, β_t$ are all uncorellated    white-noise series with equal variances. Then within the set $D=(X_t,Y_t), Y_t\\Rightarrow X_t$ and within $D'=(X_t,Z_t), Z_t\\Rightarrow X_t$. But within the set $D=(X_t,Y_t,Z_t), Y_t\\nRightarrow X_t$ and $Z_t\\nRightarrow X_t$.\n",
     "\n",
     "2. (Granger 1969) For purely deterministic series which can be predicted exactly from its past terms such as a non-stochastic series, the defintion of causality above will fail to establish causality between two such series. For insatnce, if $X_t = bt$ and $Y_t=c(t+1)$. Then $X_t$ can be predicted exactly by $b+X_{t-1}$ or by $(b/c)Y_{t-1}$. Thus there's no way to tell if $Y_t$ is a causal factor of $X_t$ or not.\n",
     "\n",
